--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs-extra": "^11.3.0",
     "jpeg-js": "^0.4.4",
     "multer": "^2.0.0",
     "nodemon": "^3.1.10",
